--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 :root {
+  /* font colors */
   --text-primary: #000;
   --text-secondary: hsl(0, 0%, 30%);
   --warning: hsl(0, 100%, 50%);
@@ -9,6 +12,13 @@
   --fw-medium: 500;
   --fw-semi-bold: 600;
   --fw-bold: 700;
+
+  /* other colors */
+  --clr-primary-100: hsl(0, 0%, 80%);
+  --clr-primary-200: hsl(0, 0%, 60%);
+  --clr-primary-300: hsl(0, 0%, 35%);
+  --clr-primary-400: hsl(0, 0%, 25%);
+  --clr-primary-500: hsl(0, 0%, 0%);
 }
 
 * {
@@ -19,11 +29,11 @@
 }
 
 body {
-  font-family: system-ui;
+  font-family: Poppins;
 }
 
 main {
-  padding: 1rem;
+  padding-inline: 2rem;
 }
 
 .flex {
@@ -56,6 +66,9 @@ main {
 .nav-bar .wrapper {
   justify-content: center;
   align-items: center;
+  width: 100%;
+  padding-block: 0.5rem;
+  border-bottom: 1px solid var(--clr-primary-100);
 }
 .site-title {
   display: none;
@@ -78,7 +91,7 @@ main {
   }
 
   .nav-bar .wrapper {
-    align-self: start;
+    justify-content: start;
   }
 
   .site-title {
@@ -92,16 +105,13 @@ main {
 
 /* main content styling */
 
-.section-break {
-  width: 90%;
-  margin: 1rem auto;
-}
-
 .selectItemsSection {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   gap: 1rem;
+  padding-block: 1rem;
+  border-bottom: 1px solid var(--clr-primary-100);
 }
 .selectItemsSection label {
   font-size: 1rem;
@@ -153,6 +163,10 @@ label[for="pokemonSelect2"] {
 
 .displayedPokemon img {
   max-width: 50%;
+}
+
+.displayedPokemon [alt="placeholder image"] {
+  margin-block: 2rem;
 }
 
 .pokemonCard {
@@ -233,7 +247,7 @@ label[for="pokemonSelect2"] {
   .dropdownWrapper {
     padding-right: 1rem;
     min-height: 25rem;
-    border-right: 1px solid black;
+    border-right: 1px solid var(--clr-primary-100);
   }
 
   .selectItemsSection .displayWrapper {
@@ -248,7 +262,7 @@ label[for="pokemonSelect2"] {
 
 .compareSection {
   max-width: 500px;
-  margin: 0 auto;
+  margin: 2rem auto;
   display: grid;
   justify-items: center;
   gap: 1rem 0;
